<resources>
    <string name="app_name">Dialer</string>

    <string name="contact1">Contact 1</string>
    <string name="contact2">Contact 2</string>
    <string name="contact3">Contact 3</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="hash">#</string>
    <string name="hint">Enter a Number</string>

    <string name="speedContactTitle">Add Speed Contact</string>
    <string name="labelPhoneNumber">Phone Number</string>
    <string name="labelContactName">Contact Name</string>
    <string name="addContactButton">Add</string>
</resources>